[package]
name = "rust2fun"
description = "A library for functional programming in Rust"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rust2fun_laws = { path = "./laws" }

[dependencies]
rust2fun_macros = { path = "./macros" }

[features]
default = ["std"]

std = []

[workspace]
members = [
    "laws",
    "macros",
]

[workspace.package]
version = "0.1.0"
authors = ["Alexander kalan Kalankhodzhaev <kalansoft@gmail.com>"]
