[package]
name = "rust2fun"
description = "A library for functional programming in Rust"
edition = "2021"
version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "1.0.0"
rust2fun_laws = { path = "./laws" }

[dependencies]
rust2fun_macros = { path = "./macros", version = "0.1.0" }

[features]
default = ["std"]

std = []

[workspace]
members = [
    "laws",
    "macros",
]

[workspace.package]
version = "0.1.0"
authors = ["Alexander kalan Kalankhodzhaev <kalansoft@gmail.com>"]
repository = "https://github.com/chapiteau-team/rust2fun"
license = "Apache-2.0"
