[package]
name = "rust2fun_laws"
description = "Laws for rust2fun"
edition = "2021"
version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust2fun = { path = "..", version = "0.1.0" }
