[package]
name = "rust2fun_macros"
edition = "2021"
version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
proc-macro2 = "1.0"